--- a/tabel.html
+++ b/tabel.html
@@ -37,10 +37,10 @@
             <tr>
               <td>1</td>
               <td><img src="1.jpg" alt="" width="100" /></td>
-              <td>Daffa Shidiqi</td>
-              <td>L</td>
-              <td>9 Juli 2015</td>
-              <td>-</td>
+              <td>Siti Mubasy-Syaroh</td>
+              <td>P</td>
+              <td>9 Januari 2011</td>
+              <td>Direktur</td>
               <td>-</td>
               <td>
                 <a href="#" class="tombol edit">Edit</a>
@@ -50,10 +50,10 @@
             <tr>
               <td>2</td>
               <td><img src="2.jpg" alt="" width="100" /></td>
-              <td>Annisa Nabil</td>
-              <td>L</td>
-              <td>9 Juli 2015</td>
-              <td>Direktur</td>
+              <td>Annisa Hayu</td>
+              <td>P</td>
+              <td>23 Juli 2015</td>
+              <td>-</td>
               <td>-</td>
               <td>
                 <a href="#" class="tombol edit">Edit</a>
@@ -63,9 +63,9 @@
             <tr>
               <td>3</td>
               <td><img src="3.jpg" alt="" width="100" /></td>
-              <td>Kaesang Ayu</td>
-              <td>L</td>
-              <td>9 Juli 2015</td>
+              <td>Anggi Suhetiani</td>
+              <td>P</td>
+              <td>9 Juli 2012</td>
               <td>Direktur</td>
               <td>-</td>
               <td>
@@ -76,9 +76,9 @@
             <tr>
               <td>4</td>
               <td><img src="4.jpg" alt="" width="100" /></td>
-              <td>Latifah Nur</td>
-              <td>L</td>
-              <td>9 Juli 2015</td>
+              <td>Siti Dwi</td>
+              <td>P</td>
+              <td>24 Juni 2005</td>
               <td>Direktur</td>
               <td>-</td>
               <td>
