--- a/tabel.html
+++ b/tabel.html
@@ -37,7 +37,7 @@
             <tr>
               <td>1</td>
               <td><img src="1.jpg" alt="" width="100" /></td>
-              <td>Siti Mubasy</td>
+              <td>Siti Mubasy-Syaroh</td>
               <td>P</td>
               <td>9 Januari 2011</td>
               <td>Direktur</td>
